2004-10-29  Ray Strode <rstrode@redhat.com>

	* test/test-mime-info-cache.c: (foo):
	return a value to silence gcc warning.

2004-10-28  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Post release version dump

=== gnome-vfs 2.8.3 ===

2004-10-28  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release

2004-10-28  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-utils.c: (filename_charset_cache_free),
	(vfs_get_filename_charset),
	(gnome_vfs_format_uri_for_display_internal),
	(gnome_vfs_format_uri_for_display),
	(gnome_vfs_make_uri_from_input_internal),
	(gnome_vfs_make_uri_from_input):
	Correctly handle the new forms of G_BROKEN_FILENAMES

2004-10-27  Ray Strode  <rstrode@redhat.com>

	* libgnomevfs/gnome-vfs-mime-handlers.c
	(gnome_vfs_mime_application_new_from_id):
	Chomp spaces off command strings.

2004-10-26  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-mime-info-cache.c:
	Handle default.list files that have lists of desktop files.

2004-10-21  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-xfer.c (copy_symlink):
	Handle existing files when copying symlinks.

2004-10-21  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-xfer.c (gnome_vfs_new_directory_with_unique_name):
	Set vfs_status on callback.

2004-10-18  Ray Strode  <rstrode@redhat.com>

	* libgnomevfs/eggdesktopentries.c
	(egg_desktop_entries_parse_entry):
	Reword error message to not break string freeze.

2004-10-18  Ray Strode  <rstrode@redhat.com>

	* libgnomevfs/eggdesktopentries.c
	(egg_desktop_entries_parse_entry):
	Error out if trying to add key-value pair to comment group
	(Patch from Miloslav Trmac <mitr@redhat.com>)

2004-10-18  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-hal-mounts.c (_hal_get_drive_name):
	Use utf8 +/- char, not latin1.

2004-10-18  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-mime-info.c (handle_attribute):
	Remove some debug spew.
