@@ -1,3 +1,10 @@
+2004-11-01  Alexander Larsson  <alexl@redhat.com>
+
+	* modules/http-authn.c: (http_authn_self_test):
+	* test/test-uri.c: (main):
+	Fix bogus warnings in later gcc (#156505).
+	Patch from Thomas Fitzsimmons
+
 2004-10-29  Ray Strode <rstrode@redhat.com>
 
 	* test/test-mime-info-cache.c: (foo):
